syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package protos;

option go_package = "./protos;protos";

message GetCustomerRequest {
  string nik = 1;
}

message GetCustomerResponse {
  string id = 1;
  string nik = 2;
  string full_name = 3;
  string legal_name = 4;
  string place_of_birth = 5;
  google.protobuf.Timestamp date_of_birth = 6;
  double salary = 7;
  string photo_ktp = 8;
  string photo_selfie = 9;
}

message CreateCustomerRequest {
  string nik = 1;
  string full_name = 2;
  string legal_name = 3;
  string place_of_birth = 4;
  google.protobuf.Timestamp date_of_birth = 5;
  double salary = 6;
  string photo_ktp = 7;
  string photo_selfie = 8;
}

message UpdateCustomerRequest {
  string id = 1;
  string nik = 2;
  string full_name = 3;
  string legal_name = 4;
  string place_of_birth = 5;
  google.protobuf.Timestamp date_of_birth = 6;
  double salary = 7;  // 64-bit floating-point number
  string photo_ktp = 8;
  string photo_selfie = 9;
}

message DeleteCustomerRequest {
  string nik = 1;
}

message GetCustomerByIdRequest {
  string id = 1;
}

message GetCustomerLimitRequest {
  string customer_id = 1;
}

message GetCustomerLimitResponse {
  string customer_id = 1;
  double tenor_1_month = 2;
  double tenor_2_months = 3;
  double tenor_3_months = 4;
  double tenor_4_months = 5;
}

message UpdateCustomerLimitRequest {
  string customer_id = 1;
  double tenor_1_month = 2;
  double tenor_2_months = 3;
  double tenor_3_months = 4;
  double tenor_4_months = 5;
}

service customerService {
  rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse);
  rpc GetCustomerById(GetCustomerByIdRequest) returns (GetCustomerResponse);
  rpc CreateCustomer(CreateCustomerRequest) returns (google.protobuf.Empty);
  rpc UpdateCustomer(UpdateCustomerRequest) returns (google.protobuf.Empty);
  rpc DeleteCustomer(DeleteCustomerRequest) returns (google.protobuf.Empty);
  rpc GetCustomerLimit(GetCustomerLimitRequest) returns (GetCustomerLimitResponse);
  rpc UpdateCustomerLimit(UpdateCustomerLimitRequest) returns (google.protobuf.Empty);
}